# github_pulse

./: .flet  .gitignore  BUILD.md  README.md  SETUP.md  pyproject.toml  pyproject.toml.example
GitHub Pulse/app_components/: __init__.py  ai_manager.py
GitHub_Pulse/app_components/: config_manager.py  processing_log_dialog.py
application/: app.py  requirements.txt
application/app_components/: __init__.py  ai_manager.py  azure_devops_api.py  cache_manager.py  config_manager.py  dataverse_api.py  github_api.py  main_gui.py  settings_dialog.py  utils.py  work_item_processor.py  workflow.py
src/: config.json  main.py  requirements.txt
src/app_components/: __init__.py  ai_action_planner.py  ai_manager.py  cache_manager.py  main_gui.py  settings_dialog.py  settings_manager.py
src/requirements/: requirements-ai.txt  requirements-base.txt  requirements-dev.txt  requirements.txt
