[project]
name = "GitHub Pulse"
version = "0.0.1"
description = "A Python-based GUI application for GitHub automation workflows and AI assisted workflows."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "TySP-Dev", email = "68524461+TySP-Dev@users.noreply.github.com" }
]
dependencies = [
  "flet==0.28.3",
  "requests>=2.32.5",
  "keyring>=25.6.0",
  "GitPython>=3.1.45",
  "openai>=2.8.0",
  "anthropic>=0.72.1"
]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "com.unnaturalll-dev"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "GitHub Pulse"

# company name to display in about app dialogs
company = "UnNaturalll Dev"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 by UnNaturalll Dev"

[tool.flet.app]
path = "src"

# Icon and splash screen configuration for builds
icon = "src/assets/icon.png"
splash = "src/assets/splash_android.png"

# Build optimizations
[tool.flet.android]
# Android-specific settings for better performance
permissions = [
    "android.permission.INTERNET",
    "android.permission.ACCESS_NETWORK_STATE"
]

[tool.flet.ios]
# iOS-specific settings
bundle_id = "com.unnaturalll-dev.githubpulse"

[tool.flet.macos]
# macOS-specific settings
bundle_id = "com.unnaturalll-dev.githubpulse"

[tool.flet.linux]
# Linux-specific settings

[tool.flet.windows]
# Windows-specific settings

[tool.uv]
dev-dependencies = [
    "flet[all]==0.28.3",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.28.3"}